# minilzo

./: CMakeCache.txt  CMakeLists.txt  Makefile  aaab.txt  cmake_install.cmake  crc.c  crc.h  libminiz.so.2  libminiz.so.2.1.0  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  miniz.c  miniz_export.h  miniz_tinfl.c
_build/: CMakeCache.txt  Makefile  cmake_install.cmake
_build/miniz/: minizTargets.cmake
amalgamation/examples/: example1.c
examples/: example1.c
miniz/: minizConfig.cmake  minizConfigVersion.cmake  minizTargets.cmake
